--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,66 @@
-/** {*/
-/*    margin: 0;*/
-/*    padding: 0;*/
-/*    box-sizing: border-box;*/
-/*}*/
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    background-color: #b4b441;
+    background-image: url("../images/noise.png");
+    background-size: cover;
+    font-family: 'Fanwood Text', serif;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.7;
+    padding: 3rem;
+    box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4 {
+    font-family: 'Shrikhand', cursive;
+}
+
+header {
+    text-align: center;
+}
 
 #submit-btn {
     display: none;
+}
+
+#movie-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.movie-card-spacer {
+    width: 33%;
+    height: 50rem;
+    padding: 2rem;
+    display: flex;
+}
+
+.movie-card {
+    background: linear-gradient(to bottom, #efefc8, #b0b054);
+    border-radius: 5rem;
+    border: 2rem solid #8c3838;
+    padding: 4rem;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /*max-width: 10rem;*/
+    /*height: 5rem;*/
 }
 
