--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,19 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
     /*max-width: 10rem;*/
     /*height: 5rem;*/
 }
+
+.delete-btn{
+    border-radius: 50%;
+    background-color: red;
+    color: white;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
