--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ header {
     height: 50rem;
     padding: 2rem;
     display: flex;
+    backface-visibility: hidden;
 }
 
 .movie-card {
@@ -55,14 +56,30 @@ header {
     border: 2rem solid #8c3838;
     padding: 4rem;
     width: 100%;
+    max-width: 400px;
+    max-height: 600px;
     height: 100%;
     margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     position: relative;
-    /*max-width: 10rem;*/
-    /*height: 5rem;*/
+
+    animation: moveInBottom .3s ease-out;
+    animation-fill-mode: backwards;
+}
+
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(25px) rotate(50deg);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
 }
 
 .delete-btn{
@@ -75,4 +92,20 @@ header {
     top: 10px;
     right: 10px;
 }
+
+/* Mobile styles */
+@media only screen and (max-width: 767px) {
+    .movie-card-spacer {
+        width: 100%;
+    }
+}
+
+/* Medium screen styles */
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .movie-card-spacer {
+        width: 50%;
+    }
+}
+
+
 
