--- a/css/styles.css
+++ b/css/styles.css
@@ -35,11 +35,11 @@ header {
 
 main {
     display: flex;
-    justify-content: center;
 }
 
 .container {
-    max-width: 100rem;
+    max-width: 120rem;
+    margin: 5rem auto;
 }
 
 #submit-btn {
@@ -125,6 +125,9 @@ form label {
 #movie-container {
     display: flex;
     flex-wrap: wrap;
+    background-color: rgba(114, 114, 41, 0.1);
+    border-radius: 5rem;
+    width: 100%;
 }
 
 .movie-card-spacer {
@@ -139,10 +142,11 @@ form label {
     background: linear-gradient(to bottom, #efefc8, #b0b054);
     border-radius: 5rem;
     border: 2rem solid #8c3838;
-    padding: 4rem;
+    padding: 2rem;
     width: 100%;
-    max-width: 400px;
-    max-height: 600px;
+    min-width: 30rem;
+    max-width: 40rem;
+    max-height: 60rem;
     height: 100%;
     margin: auto;
     display: flex;
@@ -150,6 +154,12 @@ form label {
     align-items: center;
     justify-content: space-between;
     position: relative;
+    transition: .5s;
+}
+
+.movie-card:hover {
+    transform: translateY(-3rem);
+    box-shadow: 0 3rem 2rem rgba(38, 38, 38, 0.19);
 }
 
 .movie-card-anime{
@@ -172,7 +182,8 @@ form label {
 
 .delete-btn{
     border-radius: 50%;
-    background-color: red;
+    border: none;
+    background-color: #8c3838;
     color: white;
     width: 20px;
     height: 20px;
@@ -181,17 +192,43 @@ form label {
     right: 10px;
 }
 
+.movie-poster {
+    width: 15rem;
+    height: 20rem;
+    background: linear-gradient(to bottom, #919191, #111);
+}
+
 /* Mobile styles */
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 767.98px) {
+    .container {
+        min-width: 28rem;
+    }
     .movie-card-spacer {
         width: 100%;
+    }
+    .movie-card{
+        transition: none;
+    }
+    .movie-card:hover {
+        transform: none;
+        box-shadow: none;
     }
 }
 
 /* Medium screen styles */
-@media only screen and (min-width: 768px) and (max-width: 1023px) {
+@media only screen and (min-width: 768px) and (max-width: 1199.98px) {
     .movie-card-spacer {
         width: 50%;
+    }
+    .container {
+        max-width: 85rem;
+    }
+}
+
+/* Large screen styles */
+@media only screen and (min-width: 1200px) {
+    .container {
+        min-width: 120rem;
     }
 }
 
