--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,7 @@ form {
 }
 
 .form-bottom-row {
+    display: flex;
     height: 4rem;
     margin-bottom: 2rem;
 }
@@ -83,6 +84,10 @@ form label {
 
 #title-rating label {
     color: grey;
+}
+
+.movie-select-container {
+    height: 100%;
 }
 
 #movie-select {
@@ -138,7 +143,7 @@ form label {
     border-radius: 50%;
     border: 2rem dotted #eeeeee;
     position: absolute;
-    top: 30%;
+    top: 20rem;
     left: 50%;
     z-index: 100;
     transform: translate(-50%, -50%);
