--- a/css/styles.css
+++ b/css/styles.css
@@ -148,16 +148,12 @@ form label {
     transform: translate(-50%, -50%);
     text-align: center;
 
-    animation: spin 1s linear infinite;
+    animation: spin 1s infinite;
 }
 
 @keyframes spin {
-    0% {
-        transform: translate(-50%, -50%) rotate(360deg);
-    }
-
     100% {
-        transform: translate(-50%, -50%) rotate(0deg);
+        transform: translate(-50%, -50%) rotate(360deg);
     }
 }
 
